force-app/main/default/objects/Receipt__c/fields/Sum_ILS__c.field-meta.xml
<CustomField>
    <fullName>Sum_ILS__c</fullName>
    <label>Sum ILS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>