force-app/main/default/objects/Receipt__c/fields/Sum_USD__c.field-meta.xml
<CustomField>
    <fullName>Sum_USD__c</fullName>
    <label>Sum USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>